src/test/deca/codegen/invalid/logiques/if-sans-bool.deca
// Description:
//    Expression non booléenne dans une condition
//
// Résultats:
//    Erreur de compilation: expression non booléenne

{
   int a;
   a = 5;
   if (a) { 
      println("Condition valide");
   }
}